# todoist

./: .gitignore  CMakeLists.txt  README.md  TodoApp.notifyrc  org.kde.todoist.desktop
src/: CMakeLists.txt  appsettings.cpp  appsettings.h  databasemanager.cpp  databasemanager.h  duedate.cpp  duedate.h  label.cpp  label.h  labelmodel.cpp  labelmodel.h  main.cpp  notificationmanager.cpp  notificationmanager.h  project.cpp  project.h  projectmodel.cpp  projectmodel.h  systemtraymanager.cpp  systemtraymanager.h  task.cpp  task.h  todomodel.cpp  todomodel.h
src/qml/: AddProjectDialog.qml  AddSubtaskDialog.qml  AddTaskDialog.qml  CircularProgressBar.qml  DatePicker.qml  DatePickerDialog.qml  Main.qml  MoveTaskDialog.qml  NotificationOverlay.qml  PomodoroManager.qml  PomodoroSettingsDialog.qml  PomodoroTimer.qml  ProjectSidebar.qml  RepeatSettingsCard.qml  SubtaskDialog.qml  SystemTrayControls.qml  SystemTrayWidget.qml  TaskDetailDialog.qml  TaskDetailDrawer.qml  TaskDetailPage.qml  TaskItem.qml  TaskListView.qml  TimeTracker.qml
